syntax = "proto3";

package calculator;
option go_package="./calculator/calculatorpb";

message SumRequest {
    uint32 val_1 = 1;
    uint32 val_2 = 2;
}

message SumResponse {
    uint32 result = 1;
}

message PrimeRequest {
    uint32 prime_target = 1;
}

message PrimeResponse {
    uint32 value = 1;
}

service Calculator {
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc PrimeDecomposition(PrimeRequest) returns (stream PrimeResponse) {};
}